Section on residual analysis

--- a/bikes/02_exp_smoothing.ipynb
+++ b/bikes/02_exp_smoothing.ipynb
@@ -11,7 +11,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from statsmodels.tsa.seasonal import MSTL\n",
-    "from statsmodels.tsa.holtwinters import ExponentialSmoothing"
+    "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
+    "from statsmodels.graphics.tsaplots import plot_acf"
    ]
   },
   {
@@ -105,7 +106,7 @@
     "    seasonal_periods=7\n",
     ")\n",
     "model = model.fit()\n",
-    "y_hat = model.predict(start=cycle_counts.index[0], end=cycle_counts.index[-1])\n"
+    "y_hat = model.predict(start=cycle_counts.index[0], end=cycle_counts.index[-1])"
    ]
   },
   {
@@ -121,6 +122,42 @@
     "for tick in ax.get_xticklabels():\n",
     "    tick.set_rotation(45)\n",
     "ax.legend()\n",
+    "fig.tight_layout();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Residuals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resid = cycle_counts[\"count\"] - y_hat\n",
+    "\n",
+    "fig, ax = plt.subplots(2, 2, figsize=(12, 5.5))\n",
+    "ax = ax.flatten()\n",
+    "\n",
+    "ax[0].hist(np.array(resid), bins=20)\n",
+    "ax[0].set(ylabel=\"Frequency\", xlabel=\"Residuals\")\n",
+    "\n",
+    "ax[1].axhline(0, color=\"black\", linestyle=\"--\")\n",
+    "ax[1].scatter(np.array(cycle_counts[\"count\"]), np.array(resid))\n",
+    "ax[1].set(xlabel=\"Observed\", ylabel=\"Residuals\")\n",
+    "\n",
+    "ax[2].plot(cycle_counts[\"count\"].index, np.array(resid))\n",
+    "ax[2].set(ylabel=\"Residuals\")\n",
+    "for tick in ax[2].get_xticklabels():\n",
+    "    tick.set_rotation(45)\n",
+    "\n",
+    "plot_acf(resid, ax=ax[3])\n",
+    "ax[3].set(title=\"\", xlabel=\"Lag\", ylabel=\"ACF\")\n",
+    "\n",
     "fig.tight_layout();"
    ]
   },
@@ -159,15 +196,42 @@
    "outputs": [],
    "source": [
     "actuals = []\n",
-    "forecasts = []"
+    "forecasts = []\n",
+    "maes = []\n",
+    "\n",
+    "splitter = TimeSeriesSplitter(n_splits=5, window=14, gap=5)\n",
+    "for val_start, val_end in splitter.split(cycle_counts[\"count\"]):\n",
+    "    train = cycle_counts[\"count\"].iloc[:val_start - 1]\n",
+    "    val = cycle_counts[\"count\"].iloc[val_start:val_end]\n",
+    "\n",
+    "    model = ExponentialSmoothing(\n",
+    "        train,\n",
+    "        trend=None,\n",
+    "        damped_trend=False,\n",
+    "        seasonal=\"add\",\n",
+    "        seasonal_periods=7\n",
+    "    )\n",
+    "    model = model.fit()\n",
+    "    y_hat = model.predict(start=val.index[0], end=val.index[-1])\n",
+    "\n",
+    "    actuals.append(val)\n",
+    "    forecasts.extend(y_hat)\n",
+    "    maes.append(np.mean(np.abs(val - y_hat)))\n",
+    "\n",
+    "print(f\"Mean MAE: {np.mean(maes)}\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Residuals"
+    "## Forecasting"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
