--- a/bikes/02_exp_smoothing.ipynb
+++ b/bikes/02_exp_smoothing.ipynb
@@ -215,10 +215,32 @@
     "    y_hat = model.predict(start=val.index[0], end=val.index[-1])\n",
     "\n",
     "    actuals.append(val)\n",
-    "    forecasts.extend(y_hat)\n",
+    "    forecasts.append(y_hat)\n",
     "    maes.append(np.mean(np.abs(val - y_hat)))\n",
     "\n",
     "print(f\"Mean MAE: {np.mean(maes)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot a specific fold\n",
+    "\n",
+    "fold_idx = -1\n",
+    "\n",
+    "val_start = actuals[fold_idx].index[0]\n",
+    "train = cycle_counts[\"count\"].loc[:val_start].iloc[-30:]\n",
+    "\n",
+    "fig, ax = plt.subplots()\n",
+    "train.plot(lw=2.5, color=\"black\", label=\"\")\n",
+    "actuals[fold_idx].plot(lw=2.5, color=\"blue\", label=\"y_true\")\n",
+    "forecasts[fold_idx].plot(lw=2.5, color=\"blue\", ls=\"--\", label=\"y_hat\")\n",
+    "ax.legend(ncols=2, loc=2)\n",
+    "ax.set(xlabel=\"\", ylabel=\"Counts\", ylim=(100, 1100))\n",
+    "fig.tight_layout();"
    ]
   },
   {
@@ -229,9 +251,77 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "n_test = 21\n",
+    "\n",
+    "train = cycle_counts[\"count\"].iloc[: -n_test]\n",
+    "val = cycle_counts[\"count\"].iloc[-n_test:]\n",
+    "\n",
+    "model = ExponentialSmoothing(\n",
+    "    train,\n",
+    "    trend=None,\n",
+    "    damped_trend=False,\n",
+    "    seasonal=\"add\",\n",
+    "    seasonal_periods=7\n",
+    ")\n",
+    "model = model.fit()\n",
+    "\n",
+    "trajectories = model.simulate(\n",
+    "    nsimulations=n_test,\n",
+    "    anchor=val.index[0],\n",
+    "    repetitions=100,\n",
+    "    error=\"add\",\n",
+    ")\n",
+    "\n",
+    "trajectories = trajectories.assign(\n",
+    "    **{\n",
+    "        f\"quantile_{q}\": trajectories.quantile(q=q, axis=1)\n",
+    "        for q in [0.025, 0.05, 0.5, 0.95, 0.975]\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "ax.plot(train.index.values[-50:], train.values[-50:], lw=2.5, color=\"black\")\n",
+    "\n",
+    "ax.fill_between(\n",
+    "    trajectories.index.values,\n",
+    "    trajectories[\"quantile_0.025\"].values,\n",
+    "    trajectories[\"quantile_0.975\"].values,\n",
+    "    alpha=0.15,\n",
+    "    color=\"blue\"\n",
+    ")\n",
+    "ax.fill_between(\n",
+    "    trajectories.index.values,\n",
+    "    trajectories[\"quantile_0.05\"].values,\n",
+    "    trajectories[\"quantile_0.95\"].values,\n",
+    "    alpha=0.2,\n",
+    "    color=\"blue\"\n",
+    ")\n",
+    "ax.plot(\n",
+    "    trajectories.index.values,\n",
+    "    trajectories[\"quantile_0.5\"].values,\n",
+    "    lw=2.5,\n",
+    "    color=\"blue\",\n",
+    "    ls=\"--\"\n",
+    ")\n",
+    "\n",
+    "ax.plot(val.index.values, val.values, lw=2.5, color=\"blue\")\n",
+    "ax.set(ylabel=\"Counts\")\n",
+    "\n",
+    "fig.tight_layout();"
+   ]
   }
  ],
  "metadata": {
