First version of SARIMA notebook complete

--- a/bikes/02_exp_smoothing.ipynb
+++ b/bikes/02_exp_smoothing.ipynb
@@ -117,7 +117,7 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "ax.plot(cycle_counts[\"count\"], label=\"Observed\")\n",
-    "ax.plot(y_hat, label=\"Forecast\")\n",
+    "ax.plot(y_hat, label=\"Fitted\")\n",
     "ax.set(title=LOCATION, ylabel=\"Count\")\n",
     "for tick in ax.get_xticklabels():\n",
     "    tick.set_rotation(45)\n",
