RNN version 2, saving hidden state and creating more signal

--- a/bikes/05_rnn.ipynb
+++ b/bikes/05_rnn.ipynb
@@ -11,6 +11,7 @@
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
     "from torch.optim import SGD\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -325,25 +326,224 @@
     "    \n",
     "    def forward(self, x: torch.Tensor):\n",
     "        x = x.view(-1, 3)  # Reshape to (batch_size, seq_len)\n",
-    "        h0 = torch.zeros(x.shape[0], self.hidden_size)\n",
-    "        h1 = F.relu(self.ih(x[:, 0].view(-1, 1)) + self.hh(h0))  # .view(-1, 1) to make it 2D\n",
-    "        h2 = F.relu(self.ih(x[:, 1].view(-1, 1)) + self.hh(h1))\n",
-    "        h3 = F.relu(self.ih(x[:, 2].view(-1, 1)) + self.hh(h2))\n",
-    "        return self.ho(h3)"
+    "        h = torch.zeros(x.shape[0], self.hidden_size)\n",
+    "        h = F.relu(self.ih(x[:, 0].view(-1, 1)) + self.hh(h))  # .view(-1, 1) to make it 2D\n",
+    "        h = F.relu(self.ih(x[:, 1].view(-1, 1)) + self.hh(h))\n",
+    "        h = F.relu(self.ih(x[:, 2].view(-1, 1)) + self.hh(h))\n",
+    "        return self.ho(h)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ba1ba5b",
+   "id": "22385b58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Using torch data loader\n",
-    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "# Define model\n",
+    "rnn_model = RNN1(input_size=1, hidden_size=25)\n",
+    "\n",
+    "# Define data loaders\n",
     "dataset = TensorDataset(xs, ys)\n",
-    "dataloader = DataLoader(dataset, batch_size=32)"
+    "dataloader = DataLoader(dataset, batch_size=32)\n",
+    "\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(rnn_model.parameters(), lr=0.01)\n",
+    "num_epochs = 100\n",
+    "\n",
+    "rnn_model.train()\n",
+    "for epoch in range(num_epochs):\n",
+    "    for inputs, labels in dataloader:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = rnn_model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    if (epoch + 1) % 10 == 0:\n",
+    "        print(f'Epoch [{epoch + 1}/{num_epochs}], Loss: {loss.item():.4f}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "35f0019a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fitted values\n",
+    "rnn_model.eval()\n",
+    "with torch.no_grad():\n",
+    "    fitted_values = rnn_model(xs).view(-1)\n",
+    "fitted_values = fitted_values.numpy()\n",
+    "\n",
+    "plt.plot(x, y, label='Original values', color='blue')\n",
+    "plt.plot(x[seq_len:], fitted_values, label='Fitted values', color='red')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "358bc7ec",
+   "metadata": {},
+   "source": [
+    "## Maintaining state, creating more signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ae6e4c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Predict next value based on the last 10 values\n",
+    "x_start, x_end = 0, 100\n",
+    "n_samples = 1000\n",
+    "noise = 0.2\n",
+    "\n",
+    "x = np.linspace(x_start, x_end, num=n_samples)\n",
+    "y = np.sin(x) + np.cos(0.5 * x) + 0.4 * np.cos(0.1 * x) + np.random.normal(loc=0, scale=noise, size=n_samples)\n",
+    "plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a17f210",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_seq_len = 10\n",
+    "out_seq_len = 21\n",
+    "\n",
+    "xs, ys = [], []\n",
+    "for i in range(len(y) - in_seq_len - out_seq_len):\n",
+    "    xs.append(y[i:i + in_seq_len])\n",
+    "    for j in range(in_seq_len):\n",
+    "        ys.append(y[i + j + 1:i + j + out_seq_len + 1])\n",
+    "\n",
+    "xs = np.array(xs).reshape(-1, in_seq_len)\n",
+    "ys = np.array(ys).reshape(-1, in_seq_len, out_seq_len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0415b0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_idx = 4\n",
+    "fig, axes = plt.subplots(in_seq_len, 1, figsize=(10, 15), sharex=True)\n",
+    "axes = axes.flatten()\n",
+    "\n",
+    "for i in range(in_seq_len):\n",
+    "    axes[i].scatter(\n",
+    "        x[sample_idx:sample_idx + in_seq_len + out_seq_len],\n",
+    "        y[sample_idx:sample_idx + in_seq_len + out_seq_len],\n",
+    "        label='Original sequence',\n",
+    "        color='blue'\n",
+    "    )\n",
+    "\n",
+    "    axes[i].plot(\n",
+    "        x[sample_idx:sample_idx + in_seq_len],\n",
+    "        xs[sample_idx],\n",
+    "        label='Input sequence',\n",
+    "        color='green',\n",
+    "        lw=2.5,\n",
+    "    )\n",
+    "\n",
+    "    axes[i].plot(\n",
+    "        x[sample_idx + i + 1:sample_idx + i + out_seq_len + 1],\n",
+    "        ys[sample_idx, i],\n",
+    "        label='Output sequence',\n",
+    "        color='orange',\n",
+    "    )\n",
+    "\n",
+    "fig.tight_layout();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "352c7c4b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RNN2(nn.Module):\n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        in_seq_length: int,\n",
+    "        out_seq_len: int,\n",
+    "        input_size: int = 1,\n",
+    "        hidden_size: int = 25,\n",
+    "        batch_size: int = 32,\n",
+    "    ):\n",
+    "        super().__init__()\n",
+    "        self.in_seq_length = in_seq_length\n",
+    "        self.out_seq_len = out_seq_len\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.input_size = input_size\n",
+    "        self.batch_size = batch_size\n",
+    "        self.ih = nn.Linear(input_size, hidden_size)\n",
+    "        self.hh = nn.Linear(hidden_size, hidden_size)\n",
+    "        self.ho = nn.Linear(hidden_size, out_seq_len)\n",
+    "        self.h = torch.zeros(batch_size, hidden_size)\n",
+    "    \n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        outs = []\n",
+    "        for i in range(self.in_seq_length):\n",
+    "            self.h = F.relu(self.ih(x[:, i].view(-1, 1)) + self.hh(self.h))\n",
+    "            outs.append(self.ho(self.h))\n",
+    "        outs = torch.stack(outs, dim=1)\n",
+    "        self.h = self.h.detach()\n",
+    "        return outs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22db9ac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in_seq_len = 10\n",
+    "out_seq_len = 21\n",
+    "batch_size = 32\n",
+    "\n",
+    "xs = torch.tensor(xs, dtype=torch.float32)\n",
+    "ys = torch.tensor(ys, dtype=torch.float32)\n",
+    "\n",
+    "ds = TensorDataset(xs, ys)\n",
+    "dl = DataLoader(ds, batch_size=32, drop_last=True)\n",
+    "\n",
+    "\n",
+    "rnn_model = RNN2(in_seq_length=in_seq_len, out_seq_len=out_seq_len, batch_size=batch_size)\n",
+    "criterion = nn.MSELoss()\n",
+    "optimizer = optim.Adam(rnn_model.parameters(), lr=1e-03)\n",
+    "\n",
+    "# Training loop\n",
+    "n_epochs = 100\n",
+    "rnn_model.train()\n",
+    "for epoch in range(n_epochs):\n",
+    "    for inputs, labels in dl:\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = rnn_model(inputs)\n",
+    "        loss = criterion(outputs, labels)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "    if (epoch + 1) % 10 == 0:\n",
+    "        print(f'Epoch [{epoch + 1}/{n_epochs}], Loss: {loss.item():.4f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bf97ef1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
